--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,
     initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
   <title>
     E-Commer
   </title>
@@ -23,6 +24,13 @@
       </div>
     </div>
   </nav>
+  <h1>Testear footer</h1>
+  <div id="page-container">
+    <div id="content-wrap">
+      Copyright © 2023 Football History Archives. All Rights Reserved.
+    </div>
+    <footer id="footer"></footer>
+  </div>
 
 
 </body>
